removed commented-out code switched open-source giving columns removed empty section changed min-height to height on screenshots (should fix too large box with shadow on iPad)

--- a/css/main.scss
+++ b/css/main.scss
@@ -773,7 +773,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b75a7', end
   padding: 0.5rem;
   display: flex;
   max-width: 35vw;
-  min-height: auto;
+  height: auto;
   opacity: 1;
   filter: alpha(opacity=100);
   box-shadow: 0px 0px 20px 5px #e4e4e4;
